# CameraCommander2

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  README.md
.specify/: feature.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: TESTING_AND_DEPLOYMENT.md
firmware/: README.md  platformio.ini
firmware/src/: GearedStepper.cpp  GearedStepper.h  main.cpp  protocol.h  safety.cpp  safety.h
firmware/test/: test_all.cpp  test_parser.cpp  test_safety_clamp.cpp
host/: .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml  test-rig.yaml
host/examples/: host.yaml  timelapse_mock.yaml  video_pan_mock.yaml
host/src/cameracommander/: __init__.py
host/src/cameracommander/api/: app.py  deps.py  websocket.py
host/src/cameracommander/api/routes/: camera.py  events.py  health.py  jobs.py  sessions.py  tripod.py
host/src/cameracommander/cli/: main.py
host/src/cameracommander/cli/commands/: camera.py  common.py  mock_firmware.py  pan.py  serve.py  snapshot.py  timelapse.py  tripod.py  validate.py
host/src/cameracommander/core/: config.py  errors.py  logging.py  models.py
host/src/cameracommander/hardware/camera/: base.py  gphoto.py  mock.py
host/src/cameracommander/hardware/tripod/: base.py  protocol.py  serial_adapter.py
host/src/cameracommander/mock_firmware/: motion_model.py  server.py
host/src/cameracommander/persistence/: sessions_fs.py
host/src/cameracommander/services/: calibration.py  disk.py  jobs.py  metadata.py  post_process.py  safety.py  sessions.py  timelapse.py  tripod_polling.py  video_pan.py
host/tests/contract/: test_camera_endpoints.py  test_firmware_protocol.py  test_jobs_timelapse_endpoint.py  test_jobs_video_pan_endpoint.py  test_openapi_routes.py  test_sessions_endpoints.py  test_tripod_endpoints.py
host/tests/integration/: test_fault_detection_window.py  test_focus_api.py  test_full_timelapse_mock.py  test_full_video_pan_mock.py  test_mock_firmware_cli.py  test_movement_timeout.py  test_protocol_mismatch.py  test_serve_mock_e2e.py
host/tests/unit/: test_config_validators.py  test_disk_guard.py  test_gphoto_walker.py  test_timelapse_interpolation.py
specs/001-core-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-stabilization/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-live-control/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-movement-feedback/: data-model.md  plan.md  quickstart.md  (+3 more)
web/: .eslintrc.cjs  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+26 files in other folders)
